# sorting-algorithms

./: CMakeLists.txt  README.md  selectionSort.c
include/: bubble_sort.h  buble_sort.h  insertion_sort.h  selection_sort.h  substitution_sort.h  test_bubble_sort.h  test_insert_sort.h  test_selection_sort.h  test_substitution_sort.h  util.h
sortAlgos/: bubbleSort.c  insertionSort.c  substitutionSort.c
src/: bubbleSort.c  bubble_sort.c  insertionSort.c  insertion_sort.c  selectionSort.c  selection_sort.c  substitutionSort.c  substitution_sort.c
src/util/: util.c
tests/: main_test.c  test_bubble_sort.c  test_buble_sort.c  test_insertion_sort.c  test_selection_sort.c  test_substitution_sort.c
